fix top deals products
